--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 post.id.Exists.message=The post does not exist.
 post.title.NotBlank.message=The post title must not be blank.
 post.title.Length.message=The post title has a maximum of 50 characters.
+post.title.NotExists.message=The post title exist.
 
 # Exception
 Exception.message=An error has occurred, please try again later.
