--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -1,6 +1,7 @@
 post.id.Exists.message=Bài viết không tồn tại.
 post.title.NotBlank.message=Tiêu đề bài viết không được để trống.
 post.title.Length.message=Tiêu đề bài viết có tối đa 50 ký tự.
+post.title.NotExists.message=Bài viết đã tồn tại.
 
 # Exception
 Exception.message=Đã có lỗi đã xảy ra, vui lòng thử lại sau.
